[package]
name = "llm-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Pingora
pingora = { path = "../pingora-main/pingora" }
pingora-core = { path = "../pingora-main/pingora-core"}
pingora-proxy = { path = "../pingora-main/pingora-proxy" }
pingora-http = { path = "../pingora-main/pingora-http" }
pingora-error = { path = "../pingora-main/pingora-error" }

# Lua runtime
mlua = { version = "0.10", features = ["lua54", "send", "vendored"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Redis
redis = "0.27"
r2d2 = "0.8"
r2d2_redis = "0.16"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for OpenAI calls and upstream proxy
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }

# Utils
log = "0.4"
env_logger = "0.11"
notify = "6"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
